# BrewQuality

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
brewquality/: __init__.py  bronze.py  ci_audit.py  config.py  dq_report.py  generate_data.py  gold.py  pipeline.py  session.py  silver.py
brewquality/dq/: __init__.py  engine.py  prepare.py  rules.py
databricks/: README.md  databricks.yml
databricks/dashboards/: dq_kpis.lvdash.json
databricks/notebooks/: 00_setup_unity_catalog.sql  01_bronze_ingest.py  02_silver_dq_gate.py  03_gold_build.py  04_dq_dashboard.py
docs/: PROJECT_REPORT.md  ROADMAP.md  azure-databricks-senior-guide.md  azure-operations.md  azure-setup.md  dq-dashboards.md  interview-heineken-code-map.md  runbook-data-incident.md  tech-alternatives.md
docs/adr/: 0001-medallion-architecture.md  0002-dq-engine-vs-framework.md  0003-quarantine-not-drop.md  0004-hard-vs-soft-rules.md  0005-delta-lake-storage.md
scripts/: azure_bootstrap.ps1  azure_deploy.ps1  azure_provision.ps1  azure_teardown.ps1  setup_hadoop_win.ps1
tests/: conftest.py  helpers.py  test_dq_rules.py  test_transforms.py
