[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brewquality"
version = "0.1.0"
description = "A Medallion lakehouse with automated data-quality gates (PySpark + Delta)."
requires-python = ">=3.10"
dependencies = [
    "pyspark==3.5.3",
    "delta-spark==3.2.1",
    "pyarrow>=15.0",
    "pandas>=2.0",
    # distutils shim for PySpark 3.5 on Python 3.12+ (distutils left the stdlib).
    "setuptools<81",
    "faker>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["brewquality*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Spark is verbose; keep test output readable.
addopts = "-q"
